# parser

./: .gitignore  CMakeLists.txt  LICENCE  LICENSE  README.md  ast.cpp  ast.h  check.js  package-lock.json  package.json  parser.cpp  parser.h  test.js  ЛІЦЕНЗІЯ  сервер.дія
src/: main.js
src/antlr4/: CustomDiiaParser.js  DiiaLexer.g4  DiiaParser.g4  DiiaVisitor.js
src/antlr4/buildc/: DiiaLexer.cpp  DiiaLexer.h  DiiaParser.cpp  DiiaParser.h  DiiaParser.tokens  DiiaParserBaseListener.cpp  DiiaParserBaseListener.h  DiiaParserBaseVisitor.cpp  DiiaParserBaseVisitor.h  DiiaParserListener.cpp  DiiaParserListener.h  DiiaParserVisitor.cpp  DiiaParserVisitor.h
src/ast/: ASTNode.js  AccessNode.js  AnonymousDiiaNode.js  ArgNode.js  ArithmeticNode.js  ArrayDestructionNode.js  ArrayNode.js  AsNode.js  AssignComplexNode.js  AssignComplexRightNode.js  AssignNode.js  AssignSimpleNode.js  BitwiseNode.js  BitwiseNotNode.js  BooleanNode.js  BreakNode.js  CallNode.js  ChainNode.js  ComparisonNode.js  ContinueNode.js  DictionaryNode.js  DiiaNode.js  DiiaParameterNode.js  EachNode.js  EvalNode.js  FromtoNode.js  FunctionNode.js  GetElementNode.js  GiveElementNode.js  GiveNode.js  GodNode.js  IdentifierNode.js  IdentifiersChainNode.js  IfNode.js  LambdaNode.js  MethodDeclarationNode.js  MockupDiiaNode.js  MockupImplNode.js  MockupMethodNode.js  MockupModuleNode.js  (+40 more)
src/utils/: errors.js  structures.js  text.js  visit.js
syntax/: MavkaLexer.cpp  MavkaLexer.g4  MavkaLexer.h  MavkaLexer.interp  MavkaParser.cpp  MavkaParser.g4  MavkaParser.h  MavkaParser.interp  MavkaParser.tokens  MavkaParserBaseListener.h  MavkaParserBaseVisitor.h  MavkaParserListener.h  MavkaParserVisitor.h
syntax/antlr4-cpp-runtime/runtime/src/: DefaultErrorStrategy.cpp
tests/: AccessNode.test.js  ArithmeticNode.test.js  AssignNode.test.js  CallNode.test.js  ChainNode.test.js  DiiaNode.test.js  EachNode.test.js  IdentifierNode.test.js  IfNode.test.js  TestNode.test.js
visitor/: _visitDiiaBody.cpp  visitAnonymous_diia.cpp  visitArg.cpp  visitArgs.cpp  visitArithmetic.cpp  visitArithmetic_add.cpp  visitArithmetic_mul.cpp  visitArithmetic_op_add.cpp  visitArithmetic_op_mul.cpp  visitArray_element.cpp  visitArray_elements.cpp  visitAs.cpp  visitAssign.cpp  visitAssign_by_element.cpp  visitAssign_by_identifier.cpp  visitAssign_simple.cpp  visitAssign_symbol.cpp  visitBitwise.cpp  visitBitwise_not.cpp  visitBitwise_op.cpp  visitBody.cpp  visitBody_element.cpp  visitBody_element_or_return.cpp  visitCall.cpp  visitCall_generics.cpp  visitChain.cpp  visitComp_inst_assign.cpp  visitComp_inst_block_program.cpp  visitComparison.cpp  visitDictionary_args.cpp  visitDiia.cpp  visitEach.cpp  visitFile.cpp  visitFromto.cpp  visitFromto_complex.cpp  visitFromto_simple.cpp  visitFromto_value.cpp  visitFunction.cpp  visitGenerics.cpp  visitGet_element.cpp  (+66 more)
